--- a/androidplot-core/build.gradle
+++ b/androidplot-core/build.gradle
@@ -16,7 +16,7 @@
 
 plugins {
     id 'com.android.library'
-    id 'com.dicedmelon.gradle.jacoco-android'
+    id 'com.mxalbert.gradle.jacoco-android'
     id 'maven-publish'
     id 'signing'
 }
@@ -58,9 +58,15 @@ task generateAttrsMarkdown(type: AttrMarkdown) {
 }
 
 android {
-    compileSdkVersion theCompileSdkVersion
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
 
     defaultConfig {
+        compileSdk theCompileSdkVersion
         minSdkVersion theMinSdkVersion
         targetSdkVersion theTargetSdkVersion
         testApplicationId "com.androidplot.test"
@@ -90,9 +96,9 @@ def gitUrl = 'https://github.com/halfhp/androidplot.git'
 dependencies {
 
     implementation 'com.halfhp.fig:figlib:1.0.11'
-    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.annotation:annotation:1.8.2'
 
-    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation "org.mockito:mockito-core:5.7.0"
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation "org.robolectric:robolectric:4.7.3"
 }
@@ -110,12 +116,12 @@ task javadoc(type: Javadoc) {
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier.set('javadoc')
     from javadoc.destinationDir
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier.set('sources')
     from android.sourceSets.main.java.srcDirs
 }
 
@@ -137,9 +143,11 @@ afterEvaluate {
         }
 
         publications {
-            release(MavenPublication) {
 
-                from components.release
+            publications.withType(MavenPublication) {
+//            release(MavenPublication) {
+//
+//                from components.release
 
                 // You can then customize attributes of the publication as shown below.
                 groupId = 'com.androidplot'
@@ -176,13 +184,11 @@ afterEvaluate {
     }
 }
 
-afterEvaluate {
-    signing {
-        def signingKey = System.getenv("SIGNING_KEY")
-        def signingPassword = System.getenv("SIGNING_PASSWORD")
-        useInMemoryPgpKeys(signingKey, signingPassword)
-        sign publishing.publications.release
-    }
+signing {
+    def signingKey = System.getenv("SIGNING_KEY")
+    def signingPassword = System.getenv("SIGNING_PASSWORD")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications
 }
 
 artifacts {
