--- a/demoapp-wearable/build.gradle
+++ b/demoapp-wearable/build.gradle
@@ -38,9 +38,10 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
     buildTypes {
         release {
             minifyEnabled false
