--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Set Up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
       - name: Build and Test
         run: ./gradlew testDebugUnitTest jacocoTestDebugUnitTestReport
 
