--- a/androidplot-core/build.gradle
+++ b/androidplot-core/build.gradle
@@ -103,31 +103,33 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.7.3"
 }
 
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    failOnError false
-    options {
-        links "http://docs.oracle.com/javase/7/docs/api/"
-        linksOffline "http://d.android.com/reference","${android.sdkDirectory}/docs/reference"
-    }
-    exclude '**/BuildConfig.java'
-    exclude '**/R.java'
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    archiveClassifier.set('javadoc')
-    from javadoc.destinationDir
-}
+// TODO: get javadoc working again at some point
+//task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//    failOnError false
+//    options {
+//        links "http://docs.oracle.com/javase/7/docs/api/"
+//        linksOffline "http://d.android.com/reference","${android.sdkDirectory}/docs/reference"
+//    }
+//    exclude '**/BuildConfig.java'
+//    exclude '**/R.java'
+//}
+//
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    archiveClassifier.set('javadoc')
+//    from javadoc.destinationDir
+//}
 
 task sourcesJar(type: Jar) {
     archiveClassifier.set('sources')
     from android.sourceSets.main.java.srcDirs
 }
 
-javadoc {
-    options.overview = "src/main/java/overview.html"
-}
+// TODO: get javadoc working again at some point
+//javadoc {
+//    options.overview = "src/main/java/overview.html"
+//}
 
 afterEvaluate {
     publishing {
@@ -192,6 +194,7 @@ signing {
 }
 
 artifacts {
-    archives javadocJar
+    // TODO: get javadoc working again at some point
+//    archives javadocJar
     archives sourcesJar
 }
